--- a/lib/Transforms/Obfuscation/CMakeLists.txt
+++ b/lib/Transforms/Obfuscation/CMakeLists.txt
@@ -6,6 +6,7 @@ add_llvm_library(LLVMObfuscation
   SplitBasicBlocks.cpp
   Flattening.cpp
   StringObfuscation.cpp
+  CfgIndirection.cpp
   )
 
 add_dependencies(LLVMObfuscation intrinsics_gen)
